# VaultDAO

./: ACCESSIBILITY_FIX_SUMMARY.md  CLIPPY_CLEANUP_SUMMARY.md  NOTIFICATION_FILTER_SYNC_TEST.md  PROPOSAL_CARD_ACCESSIBILITY_TEST.md  SPEC_SUMMARY.md  TEST_INSTRUCTIONS.md  TODO.md  package.json
.kiro/specs/: README.md
.kiro/specs/event-deduplication/: design.md  requirements.md  tasks.md
.kiro/specs/proposal-transformer-tests/: design.md  requirements.md  tasks.md
.kiro/specs/rpc-timeout-handling/: design.md  requirements.md  tasks.md
backend/: .env.example  package-lock.json  package.json  test_output.txt
backend/src/: app.test.ts  app.ts  index.ts  server.ts
backend/src/config/: env.test.ts  env.ts
contracts/vault/: Cargo.toml
contracts/vault/src/: bridge.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  test_attachments.rs  test_audit.rs  test_hooks.rs  test_recurring.rs  test_streaming.rs  test_subscriptions.rs  test_voting_deadline.rs  types.rs
contracts/vault/tests/: ci_compilation_test.rs  preservation_test.rs
docs/reference/: ARCHITECTURE.md  FEATURE_READINESS.md
frontend/: notification-filter-test.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ActivityItem.tsx  ConfirmationModal.tsx  CopyButton.tsx  DeployVault.tsx  NotificationCenter.tsx  ProposalActionWithSimulation.tsx  ProposalCard.tsx  ProposalDetailModal.tsx  QRSignature.tsx  SignatureFlow.tsx  SpendingAnalytics.tsx  StatusBadge.tsx  TransactionHistory.tsx  TransactionSimulator.tsx  (+3 more)
(+84 files in other folders)
